More modifications to ensure button is visible on mobile

--- a/styles/introModal.css
+++ b/styles/introModal.css
@@ -30,7 +30,7 @@
 #introModal .scrollable {
   overflow-y: auto;
   height: 70vh;
-  max-height: 650px;
+  max-height: 500px;
   padding-right: 16px;
   display: flex;
   flex-direction: column;
@@ -77,6 +77,7 @@
   width: fit-content;
   column-gap: 32px;
   margin: 32px auto;
+  margin-bottom: 16px;
 }
 
 .options-right,
